[releng] adapt job for tests
Change-Id: I0a2f2c7a4a0c766f24f380bdf226d69f2233814e
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>