@@ -37,6 +37,9 @@ This file was generated by Eclipse EGF
     <condition property="rcptt.url" value="${env.rcptt.url}">
         <isset property="env.rcptt.url" />
     </condition>
+    <condition property="example.url" value="${env.example.url}">
+        <isset property="env.example.url" />
+    </condition>
     <condition property="kitalpha_version" value="${env.kitalpha_version}">
         <isset property="env.kitalpha_version" />
     </condition>
@@ -112,6 +115,7 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dsdk.url=${sdk.url}"/>
 	                <jvmarg value="-Dvp-evolution.url=${vp-evolution.url}"/>
 	                <jvmarg value="-Drcptt.url=${rcptt.url}"/>
+	                <jvmarg value="-Dexample.url=${example.url}"/>
 	                <jvmarg value="-Dkitalpha_version=${kitalpha_version}"/>
 	                <jvmarg value="-Daut-path=${aut-path}"/>
 	                <jvmarg value="-Dtest-results=${test-results}"/>
@@ -294,6 +298,7 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${sdk.url} : ${sdk.url}" />
 		<echo message="Provided $${vp-evolution.url} : ${vp-evolution.url}" />
 		<echo message="Provided $${rcptt.url} : ${rcptt.url}" />
+		<echo message="Provided $${example.url} : ${example.url}" />
 		<echo message="Provided $${kitalpha_version} : ${kitalpha_version}" />
 		<echo message="Provided $${aut-path} : ${aut-path}" />
 		<echo message="Provided $${test-results} : ${test-results}" />
@@ -326,7 +331,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,update_TP,import_tests_projects,Resource_Reuse,Metadata,run" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,update_TP,install_example,import_tests_projects,Resource_Reuse,Metadata,run" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -508,6 +513,36 @@ This file was generated by Eclipse EGF
 
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.sdk.feature.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="install_example" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${example.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.feature.feature.group" />                
 
 
 
